@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: May 12, 2007</p>
+      <p>Last Updated: May 13, 2007</p>
     </td>
   </tr>
 </table>
@@ -508,9 +508,9 @@ Other memory:
 	  development board (untested)
 	* Added support for block devices.
 	* Simulated target now exports a VFAT filesystem
+	* Begin support for VFAT filesystem (not yet functional)
 	* Added mount() and umount()
 	* Started m68322
-	* Added support for the NXP 214x processor on the mcu123.com lpc214x
 </pre></ul>
 
 <table width ="100%">
