@@ -198,7 +198,8 @@ CONFIG_PREALLOC_TIMERS=8
 
 #
 # FAT filesystem configuration
-# CONFIG_FAT - Enable FAT filesystem support
+# CONFIG_FS_FAT - Enable FAT filesystem support
+# CONFIG_FAT_SECTORSIZE - Max supported sector size
 CONFIG_FS_FAT=y
 
 #
